unpackaged/main/default/objects/project_cloud__Financial_Snapshot_Unit__c/project_cloud__Financial_Snapshot_Unit__c.object-meta.xml
<CustomObject>
    <label>Financial Snapshot Unit</label>
    <nameField>
        <displayFormat>FSU-{0}</displayFormat>
        <label>Financial Snapshot Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Snapshot Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>