unpackaged/main/default/objects/project_cloud__Financial_Snapshot_Unit__c/fields/project_cloud__Actual_CAPEX__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Actual_CAPEX__c</fullName>
    <inlineHelpText>This field will show users the actual CAPEX amount captured in the Financial Snapshot.</inlineHelpText>
    <label>Actual Amount - CAPEX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>