unpackaged/main/default/objects/project_cloud__Financial_Snapshot_Unit__c/fields/project_cloud__Cost_Area__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Cost_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will allow to link Cost Areas to the Financial Snapshot</inlineHelpText>
    <label>Cost Area</label>
    <referenceTo>project_cloud__Area__c</referenceTo>
    <relationshipLabel>Financial Snapshot Units</relationshipLabel>
    <relationshipName>Financial_Snapshot_Units</relationshipName>
    <type>Lookup</type>
</CustomField>