unpackaged/main/default/objects/project_cloud__Financial_Snapshot_Unit__c/fields/project_cloud__Date__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Date__c</fullName>
    <inlineHelpText>This field will show the date that the financial snapshot was captured.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>