unpackaged/main/default/objects/project_cloud__Financial_Snapshot_Unit__c/fields/project_cloud__Financial_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Financial_Snapshot__c</fullName>
    <inlineHelpText>This field shows the Financial Snapshot that the Financial Snapshot Unit is related too.</inlineHelpText>
    <label>Financial Snapshot</label>
    <referenceTo>project_cloud__Financial_Snapshot__c</referenceTo>
    <relationshipLabel>Financial Snapshot Units</relationshipLabel>
    <relationshipName>Financial_Snapshot_Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>